## Process this file with automake to produce Makefile.in
## Created by Anjuta

SUBDIRS = src 

dist_doc_DATA = \
	README \
	COPYING \
	AUTHORS \
	ChangeLog \
	INSTALL \
	NEWS



# Remove doc directory on uninstall
uninstall-local:
	-rm -r $(docdir)


AM_CXXFLAGS = --std=c++11 

AM_LDFLAGS = --std=c++11 

AM_CPPFLAGS = --std=c++11 

AM_CFLAGS = --std=c++11 
